# Portfolio

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
#1 Exploratory Data Analysis using SQL of a Cinema Dataset/: CinemaSQL.ipynb  Readme.md
#2 Exploratory Data Analysis of the Barcelona Housing Dataset/: Readme.md
#3 Exploratory Analysis of Flights in the US/: EDA flights.ipynb  Readme.md
#4  Hypothesis Testing for Superconductor Materials/: Readme.md  app.py  project.toml
#4  Hypothesis Testing for Superconductor Materials/superconductor_backend/: __init__.py  analysis.py  data.py  plots.py
#5 Predictive Model for Boston Housing Prices/: Boston_housing_price_prediction.ipynb  Readme.md
#6 Multi-Class Classification on Wine Dataset/: Readme.md
BCN housing. Exploratory analysis/: EDA BCN housing.ipynb  Readme.md
Finance_stationality/: .gitignore  README.md
Finance_stationality/components/: metrics.py  sidebar.py
Finance_stationality/helpers/: app_helpers.py  chart_builder.py  config.py  data_validation.py  stats.py
Finance_stationality/services/: data_provider.py  data_provider_interface.py
Flights study. Exploratory analysis/: Readme.md
Housing prediction using regression models/: Final_version.ipynb
helpers/: analyzer.py  chart_builder.py  chart_style.py  data_preprocessing.py  ui_style.py
hipotesis_testing/: Readme.md  T05 M01.ipynb
services/: multi_ticker_analyzer.py
tests/: test_analyzer.py  test_helpers.py
